# RegressionMadeEasy

./: .gitignore  README.md  pyproject.toml
src/: linearreg.py  logisticreg.py
src/regressionmadeeasy/: linearreg.py  logisticreg.py
tests/: test_linearreg.py  test_logisticreg.py
tests/data/: hypoxia.csv
