[project]
name = "regressionmadeeasy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "statsmodels",
    "numpy>=1.23",
    "matplotlib",
    "plotnine",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
strict = true
disallow_any_explicit = true
disallow_any_generics = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  "D",
  "E",
  "F",
  "I",
  "B",
  "SIM",
  "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]